==========
Change Log
==========

Version 1.5.7 - 
-----------------
- Fixed implementation of ParseResults.__str__ to use Pythonic
  ''.join() instead of repeated string concatenation. This
  purportedly has been a performance issue under PyPy.

- Added ParserElement.inlineLiteralsUsing static method, to 
  override pyparsing's default behavior of converting string
  literals to Literal instances, to use other classes (such
  as Suppress or CaselessLiteral).

- Added new operator '<<=', which will eventually replace '<<' for 
  storing the contents of a Forward(). '<<=' does not have the same
  operator precedence problems that '<<' does.
  
- Improved linking in generated docs, proposed on the pyparsing wiki
  by techtonik, thanks!

- Fixed a bug in the definition of 'alphas', which was based on the 
  string.uppercase and string.lowercase "constants", which in fact 
  *aren't* constant, but vary with locale settings. This could make 
  parsers locale-sensitive in a subtle way. Thanks to Kef Schecter for
  his diligence in following through on reporting and monitoring 
  this bugfix!


Version 1.5.6 - June, 2011
----------------------------
- Cleanup of parse action normalizing code, to be more version-tolerant,
  and robust in the face of future Python versions - much thanks to 
  Raymond Hettinger for this rewrite!

- Removal of exception cacheing, addressing a memory leak condition
  in Python 3. Thanks to Michael Droettboom and the Cape Town PUG for
  their analysis and work on this problem!

- Fixed bug when using packrat parsing, where a previously parsed
  expression would duplicate subsequent tokens - reported by Frankie 
  Ribery on stackoverflow, thanks!

- Added 'ungroup' helper method, to address token grouping done
  implicitly by And expressions, even if only one expression in the
  And actually returns any text - also inspired by stackoverflow
  discussion with Frankie Ribery!

- Fixed bug in srange, which accepted escaped hex characters of the 